Fix modal background & scrollbar alignment

--- a/static/frontary/pumpkin/theme.css
+++ b/static/frontary/pumpkin/theme.css
@@ -2993,7 +2993,31 @@ td.tab-menu-before-last {
     border-right: 0px;
 }
 
-div.popup-outer {
+div.cell-modal-container {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+}
+
+div.cell-modal-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0.09;
+    background-color: var(--Modal-Background);
+    z-index: -1;
+}
+
+div.cell-modal-wrapper {
     display: flex;
     width: 600px;
     padding: 24px;
@@ -3002,12 +3026,10 @@ div.popup-outer {
     gap: 24px;
     background-color: var(--Dark-80);
     border-radius: 8px;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     max-height: 600px;
-    overflow: auto;
 }
 
-div.popup-title {
+div.cell-modal-header {
     flex: 1 0 0;
     color: var(--Text-Primary);
     font-size: 18px;
@@ -3017,6 +3039,15 @@ div.popup-title {
     align-items: center;
     align-self: stretch;
     justify-content: space-between;
+}
+
+div.cell-modal-body {
+    gap: 16px;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 100%;
 }
 
 div:nth-of-type(1)>.admin-node-config-button {
